# cpp-labs

./: .gitignore  CMakeLists.txt  input.txt  main.cpp
lab-1/: Circle.cpp  Circle.h  Complex.cpp  Complex.h  Swap.cpp  Swap.h  Trunc.cpp  Trunc.h
lab-2/: Complex.cpp  Complex.h
lab-3/: IntArray.cpp  IntArray.h  IntArrayPrint.cpp  Int_Array.cpp  Int_Array.h  Triangle.cpp  Triangle.h  TrianglePrint.cpp
lab-4/: Circle.cpp  Circle.h  EquilateralTriangle.cpp  EquilateralTriangle.h  IShape.h  ShapeCollection.cpp  ShapeSystem.cpp
lab-5/: FindMaxAlgo.cpp  MaxNStack.cpp  StackException.cpp
lab-6/: Algorithms.h
lab-7/: circular_buffer.h
lab-8/: Cube.h  CubeAlgorithm.cpp  CubePrint.cpp  Edge.h
