cmake_minimum_required(VERSION 3.25)
project(cpp_labs)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp_labs main.cpp lab-1/Circle.cpp lab-1/Complex.cpp lab-1/Swap.cpp lab-1/Trunc.cpp lab-2/Complex.cpp lab-3/Int_Array.cpp lab-3/Triangle.cpp lab-4/Circle.cpp lab-4/EquilateralTriangle.cpp lab-4/ShapeSystem.cpp)
